--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "^6.1.1"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.17",
+    "@types/node": "^16.11.13",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-modal": "^3.13.1",
